--- a/Quan ly sinh vien/Quan ly sinh vien.csproj
+++ b/Quan ly sinh vien/Quan ly sinh vien.csproj
@@ -51,6 +51,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -91,6 +92,12 @@
     <Compile Include="frmsinhvien.Designer.cs">
       <DependentUpon>frmsinhvien.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmsinhvienreport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmsinhvienreport.Designer.cs">
+      <DependentUpon>frmsinhvienreport.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmThemMoi.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -123,6 +130,9 @@
     <EmbeddedResource Include="frmsinhvien.resx">
       <DependentUpon>frmsinhvien.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmsinhvienreport.resx">
+      <DependentUpon>frmsinhvienreport.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmThemMoi.resx">
       <DependentUpon>frmThemMoi.cs</DependentUpon>
     </EmbeddedResource>
@@ -142,6 +152,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Report\Danhsachsinhvien.rdlc" />
+    <EmbeddedResource Include="Report\Sinhvienreport.rdlc" />
     <None Include="Dataset\DataSet1.xsc">
       <DependentUpon>DataSet1.xsd</DependentUpon>
     </None>
@@ -185,9 +197,7 @@
   <ItemGroup>
     <None Include="Resources\Actions-application-exit-icon.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Report\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
